qiitaの記事のコードを学習目的で作成 https://qiita.com/hiroyuki_mrp/items/3ef6aeba5e342d4fe672

--- a/app/templates/app1/index.html
+++ b/app/templates/app1/index.html
@@ -1,31 +1,6 @@
 
 {% load static %}
-
 <!doctype html>
-<!--
-<html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <title>{{title}}</title>
-        <link rel="stylesheet" type="text/css"
-        href="{% static 'app1/css/style.css' %}"/>　
-    </head>
-    <body>
-        <h1>{{title}}</h1>　　　
-        <p>{{msg}}世界</p>
-
-        <p><a href="{% url gopage %}">{{gopage}}</a></p>
-
-        <form action= "{% url 'form' %}" method = "post">
-            {% csrf_token %}
-            <label for = "msg">ここに入力：</label>
-            <input id = "msg" type="text" name ="msg">
-            <input type="submit" value="入力"> 
-        </form>
-    </body>
-</html>
--->
-
 <html lang="ja">
     <head>
         <meta charset="utf-8">
@@ -34,12 +9,41 @@
         href="{% static 'app1/css/style.css' %}"/>
     </head>
     <body>
-        <h1>{{title}}</h1>　　　
-        <p>{{msg|safe}}</p><!--ここでviews.pyのhtmlを有効化-->
-        <form action= "{% url 'index' %}" method = "post">
-            {% csrf_token %}
-            {{form.as_ul}} <!--ここ-->
-            <input type="submit" value="入力">
-        </form>
+        <h1>{{title}}</h1>
+        <p>{{msg|safe}}</p>
+        <table>
+            <form aciton = "{%url 'index' % }" method = "POST">
+                {% csrf_token %}
+                {{form.as_table}}
+            <tr><td></td><td><input type = "submit" value = "検索"></td></tr>
+            </form>
+        </table>
+        <hr>
+        <table>
+          <th>ID</th>
+          <th>日付</th>
+          <th>氏名</th>
+          <th>朝食</th>
+          <th>昼食</th>
+          <th>健康状態</th>
+          <th>職務状態</th>
+          {%for item in data %}
+            <tr>
+                    <td>{{item.id}}</td>
+                    <td>{{item.date}}</td>
+                    <td>{{item.name}}</td>
+                    <td>{% if item.bf == False %}{% endif %}
+                        {% if item.bf == True %}✔︎{% endif %}</td>
+                    <td>{% if item.lunch == False %}{% endif %}
+                        {% if item.lunch == True %}✔︎{% endif %}</td>
+                    <td>{{item.kenkobody}}</td>
+                    <td>{{item.workcond}}</td>
+                    <td><a href = "{% url 'edit' item.id %}">編集</a></td>
+                    <td><a href = "{% url 'delete' item.id %}">削除</a></td>
+            </tr>
+            {% endfor %}
+        </table>
+        <p><a href="{% url 'create' %}">データの追加</a></p>
+        <p><a href="{% url 'find' %}">検索</a></p>        
     </body>
 </html>
