--- a/app/static/app1/css/style.css
+++ b/app/static/app1/css/style.css
@@ -1,18 +1,20 @@
-body {
-    color:blue;
-    font-size:20pt;
+
+
+table {
+    margin:50px;
+    font-size:14pt;
 }
 
-h1 {
-    color:red;
-    font-size:32pt;
+table tr th {
+    background-color: rgb(43, 139, 204);
+    color:black;
+    padding:2px 10px;
+    border-width:2px;
 }
 
-p {
-    color:green;
-    margin:10px;
-}
-
-a {
-    color:yellow;
+table tr td {
+    background-color: rgb(43, 139, 204);
+    color:black;
+    padding:2px 10px;
+    border-width:2px;
 }
